# play-agent

./: .env  .gitignore  CLAUDE.md  README.md  launch_gui.py  pyproject.toml
.claude/: settings.local.json
docs/: DSL_GUIDE.md  PROJECT_STRUCTURE.md
sample_tasks/: demo_task.yaml
sample_tasks/templates/: 00_base_skeleton.yaml  01_daily_farm_image_first.yaml  02_text_priority_fallback.yaml  03_drag_scan_loop.yaml  README.md
src/botCore/: __init__.py  adb_client.py
src/dslBot/: __init__.py  base.py  runner.py
src/game_bot/: __init__.py  adb_client.py  config_io.py  coords.py  main.py  models.py  run.py  runner.py  vision.py
src/game_bot/ui/: main_window.py
src/game_bot_mumu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mobile_v2/: README.md  buildozer.spec.sample  main.py
src/task/: cgsh.yaml  keye.yaml  kyrw.yaml  start.yaml
src/task_engine/: __init__.py  config_io.py  logger.py
src/yamlBot/: __init__.py  config_io.py  runner.py
tasks/: ymjh_dsl.py
tests/: test_adb_integration.py  test_config_io.py  test_coords.py  test_runner_basic.py  test_screenshot.py  test_vision_template.py  test_vision_text.py
